--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^3.4.8",
+    "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "multer": "^1.1.0",
+    "passport": "^0.3.2",
     "q": "^1.4.1"
   },
   "devDependencies": {},
