--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "multer": "^1.1.0",
+    "ng-sortable": "^1.3.4",
     "passport": "^0.3.2",
     "q": "^1.4.1"
   },
