--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "express": "^3.4.8",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.9",
     "multer": "^1.1.0",
     "ng-sortable": "^1.3.4",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0",
+    "passport-google": "^0.3.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "q": "^1.4.1"
   },
   "devDependencies": {},
